--- a/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
+++ b/module-1/lab-df-calculation-and-transformation/your-code/challenge-2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,13 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "# Importing the dataset from Ironhack's database"
+    "# Importing the dataset from Ironhack's database\n",
+    "pokemon = pd.read_csv('Pokemon.csv')"
    ]
   },
   {
@@ -77,11 +78,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Same values: 800 , different values: 0\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "pokemon.head()\n",
+    "fields=['HP', 'Attack', 'Defense', 'Sp. Atk', 'Sp. Def', 'Speed']\n",
+    "total = []\n",
+    "pokemon.columns\n",
+    "for i in range(len(pokemon['Name'])):\n",
+    "    tot=0\n",
+    "    for e in fields:\n",
+    "        tot+=pokemon[e][i]\n",
+    "    total.append(tot)\n",
+    "same=0\n",
+    "diff=0\n",
+    "for i in range(len(total)):\n",
+    "    if pokemon['Total'][i]==total[i]:\n",
+    "        same+=1\n",
+    "    else: diff+=1\n",
+    "\n",
+    "print('Same values: {} , different values: {}'.format(same,diff))\n",
+    "  "
    ]
   },
   {
@@ -119,11 +146,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>-</th>\n",
+       "      <th>Bug</th>\n",
+       "      <th>Dark</th>\n",
+       "      <th>Dragon</th>\n",
+       "      <th>Electric</th>\n",
+       "      <th>Fairy</th>\n",
+       "      <th>Fighting</th>\n",
+       "      <th>Fire</th>\n",
+       "      <th>Flying</th>\n",
+       "      <th>Ghost</th>\n",
+       "      <th>Grass</th>\n",
+       "      <th>Ground</th>\n",
+       "      <th>Ice</th>\n",
+       "      <th>Normal</th>\n",
+       "      <th>Poison</th>\n",
+       "      <th>Psychic</th>\n",
+       "      <th>Rock</th>\n",
+       "      <th>Steel</th>\n",
+       "      <th>Water</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    -  Bug  Dark  Dragon  Electric  Fairy  Fighting  Fire  Flying  Ghost  \\\n",
+       "0 NaN    0     0       0         0      0         0     0       0      0   \n",
+       "1 NaN    0     0       0         0      0         0     0       0      0   \n",
+       "2 NaN    0     0       0         0      0         0     0       0      0   \n",
+       "3 NaN    0     0       0         0      0         0     0       0      0   \n",
+       "4 NaN    0     0       0         0      0         0     1       0      0   \n",
+       "\n",
+       "   Grass  Ground  Ice  Normal  Poison  Psychic  Rock  Steel  Water  \n",
+       "0      1       0    0       0       1        0     0      0      0  \n",
+       "1      1       0    0       0       1        0     0      0      0  \n",
+       "2      1       0    0       0       1        0     0      0      0  \n",
+       "3      1       0    0       0       1        0     0      0      0  \n",
+       "4      0       0    0       0       0        0     0      0      0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "dummies1 = pd.get_dummies(pokemon['Type 1'])\n",
+    "dummies2 = pd.get_dummies(pokemon['Type 2'])\n",
+    "dummies=dummies1 + dummies2\n",
+    "display(dummies.head())"
    ]
   },
   {
@@ -145,11 +353,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "pokemon['Type 2'].fillna('-', inplace=True)\n",
+    "def combo(a,b):\n",
+    "    if b!='-':\n",
+    "        return '{}-{}'.format(a,b)\n",
+    "    else:\n",
+    "        return a\n",
+    "pokemon['Combo Type']= [(combo(pokemon['Type 1'][i],pokemon['Type 2'][i])) for i in range(len(pokemon['Type 1']))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total      1.000000\n",
+       "Dragon     0.229705\n",
+       "Psychic    0.124688\n",
+       "Steel      0.109703\n",
+       "Fire       0.078726\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "lst2= list(pd.unique(pokemon['Type 1']))\n",
+    "lst3 = list(pd.unique(pokemon['Type 2']))\n",
+    "lst=set(lst2 + lst3)\n",
+    "lst.remove('-')\n",
+    "lst\n",
+    "dummies['Total']=pokemon['Total']\n",
+    "tab = dummies.corr()\n",
+    "tab.sort_values('Total', inplace=True, ascending=False)\n",
+    "display(tab['Total'].head())"
    ]
   },
   {
@@ -163,11 +410,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Total              1.000000\n",
+       "Type 1_Dragon      0.196532\n",
+       "Type 2_Fighting    0.138726\n",
+       "Type 2_Dragon      0.115240\n",
+       "Type 2_Ice         0.100870\n",
+       "Name: Total, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "dummies1_2 = pd.get_dummies(pokemon[['Type 1','Type 2']])\n",
+    "dummies1_2['Total']=pokemon['Total']\n",
+    "tab1_2 = dummies1_2.corr()\n",
+    "tab1_2.sort_values('Total', inplace=True, ascending=False)\n",
+    "display(tab1_2['Total'].head())"
    ]
   }
  ],
@@ -187,7 +454,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
